--- a/app/src/main/res/layout/activity_song_list_display.xml
+++ b/app/src/main/res/layout/activity_song_list_display.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/edge_margin"
+        android:layout_marginEnd="@dimen/edge_margin"
         android:text="@string/now_playing" />
 
     <ListView
