--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/edge_margin"
+        android:layout_marginStart="@dimen/edge_margin"
         android:layout_marginTop="@dimen/edge_margin"
         app:layout_constraintLeft_toRightOf="@id/play_button"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/edge_margin"
         android:layout_marginLeft="@dimen/edge_margin"
+        android:layout_marginStart="@dimen/edge_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/play_button"
         app:layout_constraintTop_toBottomOf="@id/title"
