Use RecyclerView instead of ListView

--- a/app/src/main/res/layout/activity_song_list_display.xml
+++ b/app/src/main/res/layout/activity_song_list_display.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="@dimen/edge_margin"
         android:text="@string/now_playing" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
