--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,26 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/play_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/edge_margin"
-        android:layout_marginTop="@dimen/edge_margin"
         android:contentDescription="@string/icon_desc"
         android:src="@drawable/purple_play_icons8"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:padding="@dimen/edge_margin" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/edge_margin"
-        android:layout_marginStart="@dimen/edge_margin"
-        android:layout_marginTop="@dimen/edge_margin"
+        android:layout_marginTop="@dimen/text_margin"
         app:layout_constraintLeft_toRightOf="@id/play_button"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Nice For What" />
@@ -31,13 +26,9 @@
         android:id="@+id/artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/edge_margin"
-        android:layout_marginLeft="@dimen/edge_margin"
-        android:layout_marginStart="@dimen/edge_margin"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/text_margin"
         app:layout_constraintLeft_toRightOf="@id/play_button"
         app:layout_constraintTop_toBottomOf="@id/title"
         tools:text="Drake" />
-
 
 </android.support.constraint.ConstraintLayout>
